Prevent extra space on dropdowns when result sets are small

--- a/client/web/css/app.css
+++ b/client/web/css/app.css
@@ -35,7 +35,7 @@ a {
 }
 
 ul {
-    height:250px;
+    max-height:250px;
     overflow: auto;
 }
 
